--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,20 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // 동그란 이미지 뷰 라이브러리
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    // 서버 연결을 위한 Retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+    // retrofit2에서 gson 사용을 위한 컨버터
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Retrofit 라이브러리 응답으로 가짜 객체를 만들기 위해
+    implementation 'com.squareup.retrofit2:retrofit-mock:2.9.0'
+}
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        languageVersion = '1.4'
+    }
 }
